--- a/traducciones/pagina-1.html
+++ b/traducciones/pagina-1.html
@@ -167,7 +167,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                 <div class="container_cards">
 <!------------------------------------------------------------------------------------------------------>
 <!--Copiar esta parte señalada con <!- -> para cada mod que sea agregado-->      
-                <div class="card"  data-aos="fade-down-right" data-aos-duration="1000">
+                <div class="card"   >
                     <div class="cover">
                         <img src="../assets/logos/logo_exit_music.png" alt="">
                         <div class="img__back" style="background-image: url('../assets/capturas/Exit_Music/cap_1.png'); "></div>
@@ -200,7 +200,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                 </div>
 <!------------------------------------------------------------------------------------------------------>                
 <!--AGREGAR POR DEBAJO DE ESTA LINEA LAS NUEVAS CARTAS-->
-                <div class="card"  data-aos="fade-down-right" data-aos-duration="1000">
+                <div class="card"   >
                     <div class="cover">
                         <img src="../assets/logos/logo_salvation.png" alt="">
                         <div class="img__back" style="background-image: url('../assets/capturas/Salvation/cap_1.png');"></div>
@@ -232,7 +232,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                     </div>
                 </div>
 
-                <div class="card"  data-aos="fade-down-right" data-aos-duration="1000">
+                <div class="card"   >
                     <div class="cover">
                         <img src="../assets/logos/default.png" alt="">
                         <div class="img__back" style="background-image: url('../assets/capturas/Monika_Before_Story/cap_1.png');"></div>
@@ -264,7 +264,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                     </div>
                 </div>
 
-                <div class="card"  data-aos="fade-down-right" data-aos-duration="1000">
+                <div class="card"   >
                     <div class="cover">
                         <img src="../assets/logos/logo_mc_revenge.png" alt="">
                         <div class="img__back" style="background-image: url('../assets/capturas/MCs_Revenge/cap_1.jpg');"></div>
@@ -295,7 +295,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                     </div>
                 </div>
 <!------------------------------------------------------------------------------------------------------>
-                <div class="card"  data-aos="fade-down-left" data-aos-duration="1000">
+                <div class="card"   >
                         <div class="cover">
                             <img src="../assets/logos/logo_relapse.png" alt="">
                             <div class="img__back" style="background-image: url('../assets/capturas/Relapse/cap_1.jpg');"></div>
@@ -326,7 +326,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                             <a href="../mod/template" class="saber_mas"> Más Información</a>
                         </div>
                 </div>
-                <div class="card"  data-aos="fade-down-left" data-aos-duration="1000">
+                <div class="card"   >
                         <div class="cover">
                             <img src="../assets/logos/default.png" alt="">
                             <div class="img__back" style="background-image: url('../assets/capturas/Sweet_Dreams/cap_1.jpg');"></div>
@@ -356,7 +356,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                             <a href="../mod/template" class="saber_mas"> Más Información</a>
                         </div>
                 </div>
-                <div class="card"  data-aos="fade-down-left" data-aos-duration="1000">
+                <div class="card"   >
                         <div class="cover">
                             <img src="../assets/logos/logo_a_date_with_monika.png" alt="">
                             <div class="img__back" style="background-image: url('../assets/gui/Dania.png');"></div>
@@ -386,7 +386,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                             <a href="../mod/template" class="saber_mas"> Más Información</a>
                         </div>
                 </div>
-                <div class="card"  data-aos="fade-down-left" data-aos-duration="1000">
+                <div class="card"   >
                         <div class="cover">
                             <img src="../assets/logos/default.png" alt="">
                             <div class="img__back" style="background-image: url('../assets/capturas/Nightmare/cap_1.jpg');"></div>
@@ -417,7 +417,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                         </div>
                 </div>
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
-                <div class="card"  data-aos="fade-down-right" data-aos-duration="1000">
+                <div class="card"   >
                         <div class="cover">
                             <img src="../assets/logos/default.png" alt="">
                             <div class="img__back" style="background-image: url('../assets/capturas/Not_Oki_Doki_a_lost_chapter/cap_1.png');"></div>
@@ -448,7 +448,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                             <a href="../mod/template" class="saber_mas"> Más Información</a>
                         </div>
                 </div>
-                <div class="card"  data-aos="fade-down-right" data-aos-duration="1000">
+                <div class="card"   >
                         <div class="cover">
                             <img src="../assets/logos/logo_we_are_the_literature_club.png" alt="">
                             <div class="img__back" style="background-image: url('../assets/capturas/We_Are_The_Literature_Club_2/cap_1.jpg');"></div>
@@ -478,7 +478,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                             <a href="../mod/template" class="saber_mas"> Más Información</a>
                         </div>
                 </div>
-                <div class="card"  data-aos="fade-down-right" data-aos-duration="1000">
+                <div class="card"   >
                         <div class="cover">
                             <img src="../assets/logos/default.png" alt="">
                             <div class="img__back" style="background-image: url('../assets/capturas/Yandere_Club/cap_1.jpg');"></div>
@@ -508,7 +508,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                             <a href="../mod/template" class="saber_mas"> Más Información</a>
                         </div>
                 </div>
-                <div class="card"  data-aos="fade-down-right" data-aos-duration="1000">
+                <div class="card"   >
                         <div class="cover">
                             <img src="../assets/logos/default.png" alt="">
                             <div class="img__back" style="background-image: url('../assets/capturas/Dissaparence/cap_1.jpg');"></div>
@@ -539,7 +539,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                         </div>
                 </div>
 <!------------------------------------------------------------------------------------------------------>
-                <div class="card"  data-aos="fade-down-left" data-aos-duration="1000">
+                <div class="card"   >
                         <div class="cover">
                             <img src="../assets/logos/Logo_MAS.png" alt="">
                             <div class="img__back" style="background-image: url('../assets/capturas//Monika_After_Story/cap_1.jpg');"></div>
@@ -570,7 +570,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                             <a href="../mod/template" class="saber_mas"> Más Información</a>
                         </div>
                 </div>
-                <div class="card"  data-aos="fade-down-left" data-aos-duration="1000">
+                <div class="card"   >
                         <div class="cover">
                             <img src="../assets/logos/logo_outcast.png" alt="">
                             <div class="img__back" style="background-image: url('../assets/capturas/Outcast/cap_1.jpg')"></div>
@@ -601,7 +601,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                             <a href="../mod/template" class="saber_mas"> Más Información</a>
                         </div>
                 </div>
-                <div class="card"  data-aos="fade-down-left" data-aos-duration="1000">
+                <div class="card"   >
                         <div class="cover">
                             <img src="../assets/logos/default.png" alt="">
                             <div class="img__back" style="background-image: url('../assets/capturas/Rhapsody/cap_1.jpg');"></div>
@@ -631,7 +631,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                             <a href="../mod/template" class="saber_mas"> Más Información</a>
                         </div>
                 </div>
-                <div class="card"  data-aos="fade-down-left" data-aos-duration="1000">
+                <div class="card"   >
                         <div class="cover">
                             <img src="../assets/logos/logo_sayori_date.png" alt="">
                             <div class="img__back" style="background-image: url('../assets/capturas/Sayori_Date/cap_1.jpg');"></div>
@@ -662,7 +662,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                         </div>
                 </div>
 <!------------------------------------------------------------------------------------------------------>
-                <div class="card"  data-aos="fade-down-right" data-aos-duration="1000">
+                <div class="card"   >
                         <div class="cover">
                             <img src="../assets/logos/default.png" alt="">
                             <div class="img__back" style="background-image: url('../assets/capturas/Rainclouds/cap_1.jpg');"></div>
@@ -693,7 +693,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                             <a href="../mod/template" class="saber_mas"> Más Información</a>
                         </div>
                 </div>
-                <div class="card"  data-aos="fade-down-right" data-aos-duration="1000">
+                <div class="card"   >
                         <div class="cover">
                             <img src="../assets/logos/logo_just_natsuki.png" alt="">
                             <div class="img__back" style="background-image: url('../assets/capturas/Just_Natsuki/cap_1.jpg');"></div>
@@ -723,7 +723,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                             <a href="../mod/template" class="saber_mas"> Más Información</a>
                         </div>
                 </div>
-                <div class="card"  data-aos="fade-down-right" data-aos-duration="1000">
+                <div class="card"   >
                         <div class="cover">
                             <img src="../assets/logos/logo_we_are_the_literature_club_1.png" alt="">
                             <div class="img__back" style="background-image: url('../assets/capturas/We_Are_The_Literature_Club/cap_1.jpg');"></div>
@@ -753,7 +753,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                             <a href="../mod/template" class="saber_mas"> Más Información</a>
                         </div>
                 </div>
-                <div class="card"  data-aos="fade-down-right" data-aos-duration="1000">
+                <div class="card"   >
                         <div class="cover">
                             <img src="../assets/logos/logo_spark_of_hope.png" alt="">
                             <div class="img__back" style="background-image: url('../assets/capturas/Spark_Of_Hope/cap_1.jpg');"></div>
@@ -784,7 +784,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                         </div>
                 </div>
 <!------------------------------------------------------------------------------------------------------>
-                <div class="card"  data-aos="fade-down-left" data-aos-duration="1000">
+                <div class="card"   >
                         <div class="cover">
                             <img src="../assets/logos/logo_new_eyes.png" alt="">
                             <div class="img__back" style="background-image: url('../assets/capturas/New_Eyes/cap_1.jpg');"></div>
@@ -814,7 +814,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                             <a href="../mod/template" class="saber_mas"> Más Información</a>
                         </div>
                 </div>
-                <div class="card"  data-aos="fade-down-left" data-aos-duration="1000">
+                <div class="card"   >
                         <div class="cover">
                             <img src="../assets/logos/logo_olm.png" alt="">
                             <div class="img__back" style="background-image: url('../assets/capturas/One_Last_Memory/cap_1.jpg');"></div>
@@ -845,7 +845,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                             <a href="../mod/template" class="saber_mas"> Más Información</a>
                         </div>
                 </div>
-                <div class="card"  data-aos="fade-down-left" data-aos-duration="1000">
+                <div class="card"   >
                         <div class="cover">
                             <img src="../assets/logos/logo_somnium.png" alt="">
                             <div class="img__back" style="background-image: url('../assets/capturas/Somnium/cap_1.jpg');"></div>
@@ -876,7 +876,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                             <a href="../mod/template" class="saber_mas"> Más Información</a>
                         </div>
                 </div>
-                <div class="card"  data-aos="fade-down-left" data-aos-duration="1000">
+                <div class="card"   >
                         <div class="cover">
                             <img src="../assets/logos/logo_your_bully_natsuki.png" alt="">
                             <div class="img__back" style="background-image: url('../assets/capturas/Your_Bully_Natsuki/cap_1.jpg');"></div>
