--- a/traducciones/pagina-2.html
+++ b/traducciones/pagina-2.html
@@ -119,7 +119,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                 </p>
                 </div>
             </div>
-            <a href="#" class="btn-close-popup">X</a>
+            <a href="pagina-2" class="btn-close-popup">X</a>
         </div>
     </div>
     <div class="parallax" style="background-image: url(../assets/gui/banner_traduccion.jpg);">
@@ -167,7 +167,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                 <div class="container_cards">
 <!------------------------------------------------------------------------------------------------------>
 <!--Copiar esta parte señalada con <!- -> para cada mod que sea agregado-->      
-                <div class="card"  data-aos="fade-down-right" data-aos-duration="2000">
+                <div class="card"   >
                     <div class="cover">
                         <img src="../assets/logos/logo_dont.png" alt="">
                         <div class="img__back" style="background-image: url('../assets/capturas/Dont/cap_1.png'); "></div>
@@ -199,7 +199,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                 </div>
 <!------------------------------------------------------------------------------------------------------>                
 <!--AGREGAR POR DEBAJO DE ESTA LINEA LAS NUEVAS CARTAS-->
-                <div class="card"  data-aos="fade-down-right" data-aos-duration="2000">
+                <div class="card"   >
                     <div class="cover">
                         <img src="../assets/logos/logo_the_musical.png" alt="">
                         <div class="img__back" style="background-image: url('../assets/capturas/Just_Monika_musical/cap_1.png');"></div>
@@ -230,7 +230,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                     </div>
                 </div>
 
-                <div class="card"  data-aos="fade-down-right" data-aos-duration="2000">
+                <div class="card"   >
                     <div class="cover">
                         <img src="../assets/logos/logo_the_truth_of_the_literature_club.png" alt="">
                         <div class="img__back" style="background-image: url('../assets/capturas/Truth_of_literature_club/cap_1.jpg');"></div>
@@ -261,7 +261,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                     </div>
                 </div>
 
-                <div class="card"  data-aos="fade-down-right" data-aos-duration="2000">
+                <div class="card"   >
                     <div class="cover">
                         <img src="../assets/logos/logo_forever_&_ever.png" alt="">
                         <div class="img__back" style="background-image: url('../assets/capturas/Forever_and_ever/cap_1.jpg');"></div>
@@ -292,7 +292,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                     </div>
                 </div>
 <!------------------------------------------------------------------------------------------------------>
-                <div class="card"  data-aos="fade-down-right" data-aos-duration="2000">
+                <div class="card"   >
                         <div class="cover">
                             <img src="../assets/logos/default.png" alt="">
                             <div class="img__back" style="background-image: url('../assets/capturas/Our_Final_Heartbeat/cap_1.jpg');"></div>
@@ -323,7 +323,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                             <a href="../mod/template" class="saber_mas"> Más Información</a>
                         </div>
                 </div>
-                <div class="card"  data-aos="fade-down-right" data-aos-duration="2000">
+                <div class="card"   >
                         <div class="cover">
                             <img src="../assets/logos/default.png" alt="">
                             <div class="img__back" style="background-image: url('../assets/capturas/Our_Time/cap_1.jpg');"></div>
@@ -354,7 +354,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                             <a href="../mod/template" class="saber_mas"> Más Información</a>
                         </div>
                 </div>
-                <div class="card"  data-aos="fade-down-right" data-aos-duration="2000">
+                <div class="card"   >
                         <div class="cover">
                             <img src="../assets/logos/logo_memories_of_nothing.png" alt="">
                             <div class="img__back" style="background-image: url('../assets/capturas/Memories_of_nothing/cap_1.png');"></div>
@@ -384,7 +384,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                             <a href="../mod/template" class="saber_mas"> Más Información</a>
                         </div>
                 </div>
-                <div class="card"  data-aos="fade-down-right" data-aos-duration="2000">
+                <div class="card"   >
                         <div class="cover">
                             <img src="../assets/logos/logo_heroina_natsuki.png" alt="logo">
                             <div class="img__back" style="background-image: url('../assets/capturas/Magical_literary_heroine_Natsuki/cap_1.jpg')"></div>
@@ -415,21 +415,20 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                         </div>
                 </div>
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
-                <div class="card"  data-aos="fade-down-right" data-aos-duration="2000">
+                <div class="card"   >
                         <div class="cover">
-                            <img src="../assets/logos/logo_exit_music_redux.png" alt="">
-                            <div class="img__back" style="background-image: url('../assets/capturas/Exit_Music_Redux/cap_1.png');"></div>
+                            <img src="../assets/logos/logo_basically_ddlc.png" alt="">
+                            <div class="img__back" style="background-image: url('../assets/capturas/Basically_DDLC/cap_1.png');"></div>
                         </div>
                         <div class="description">
-                            <h2>Exit Music Redux</h2>
-                            <label class="seleccion-editor">SELECCIÓN DE LA COMUNIDAD</label>
+                            <h2>Basically DDLC</h2>
                             <div class="info-mods">
                                 <div class="duracion-card">
-                                    <label>Duracion:<br> <b>Muy Largo</b></label>
+                                    <label>Duracion:<br> <b>Muy Corto</b></label>
                                     <hr>
                                 </div>
                                 <div class="genero-card">
-                                    <label>Genero: <br><b>Drama/Romance</b></label>
+                                    <label>Genero: <br><b>Comedia</b></label>
                                     <hr>
                                 </div>
                                 <div class="estado-card">
@@ -446,7 +445,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                             <a href="../mod/template" class="saber_mas"> Más Información</a>
                         </div>
                 </div>
-                <div class="card"  data-aos="fade-down-right" data-aos-duration="2000">
+                <div class="card"   >
                         <div class="cover">
                             <img src="../assets/logos/default.png" alt="">
                             <div class="img__back" style="background-image: url('../assets/capturas/Yuri_Parable/cap_1.jpg');"></div>
@@ -476,7 +475,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                             <a href="../mod/template" class="saber_mas"> Más Información</a>
                         </div>
                 </div>
-                <div class="card"  data-aos="fade-down-right" data-aos-duration="2000">
+                <div class="card"   >
                         <div class="cover">
                             <img src="../assets/logos/default.png" alt="">
                             <div class="img__back" style="background-image: url('../assets/capturas/Stream_of_consciousness/cap_1.png');"></div>
@@ -506,7 +505,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                             <a href="../mod/template" class="saber_mas"> Más Información</a>
                         </div>
                 </div>
-                <div class="card"  data-aos="fade-down-right" data-aos-duration="2000">
+                <div class="card"   >
                         <div class="cover">
                             <img src="../assets/logos/default.png" alt="">
                             <div class="img__back" style="background-image: url('../assets/capturas/Steamed_Hams/cap_1.jpg');"></div>
@@ -537,7 +536,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                         </div>
                 </div>
 <!------------------------------------------------------------------------------------------------------>
-                <div class="card"  data-aos="fade-down-right" data-aos-duration="2000">
+                <div class="card"   >
                         <div class="cover">
                             <img src="../assets/logos/default.png" alt="">
                             <div class="img__back" style="background-image: url('../assets/gui/Dania.png');"></div>
@@ -567,7 +566,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                             <a href="../mod/template" class="saber_mas"> Más Información</a>
                         </div>
                 </div>
-                <div class="card"  data-aos="fade-down-right" data-aos-duration="2000">
+                <div class="card"   >
                         <div class="cover">
                             <img src="../assets/logos/logo_lost_ascencion.png" alt="">
                             <div class="img__back" style="background-image: url('../assets/capturas/Lost_ascencion/cap_1.jpg')"></div>
@@ -597,7 +596,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                             <a href="../mod/template" class="saber_mas"> Más Información</a>
                         </div>
                 </div>
-                <div class="card"  data-aos="fade-down-right" data-aos-duration="2000">
+                <div class="card"   >
                         <div class="cover">
                             <img src="../assets/logos/logo_blue_skies.png" alt="">
                             <div class="img__back" style="background-image: url('../assets/capturas/Blue_Skies/cap_1.jpg');"></div>
@@ -632,7 +631,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                             <a href="../mod/template" class="saber_mas"> Más Información</a>
                         </div>
                 </div>
-                <div class="card"  data-aos="fade-down-right" data-aos-duration="2000">
+                <div class="card"   >
                         <div class="cover">
                             <img src="../assets/logos/logo_FA.png" alt="">
                             <div class="img__back" style="background-image: url('../assets/capturas/Fallen_Angel/cap_1.jpg');"></div>
@@ -664,7 +663,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                         </div>
                 </div>
 <!------------------------------------------------------------------------------------------------------>
-                <div class="card"  data-aos="fade-down-right" data-aos-duration="2000">
+                <div class="card"   >
                         <div class="cover">
                             <img src="../assets/logos/default.png" alt="">
                             <div class="img__back" style="background-image: url('../assets/capturas/Natsuki_Side_Story/cap_1.jpg');"></div>
@@ -694,7 +693,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                             <a href="../mod/template" class="saber_mas"> Más Información</a>
                         </div>
                 </div>
-                <div class="card"  data-aos="fade-down-right" data-aos-duration="2000">
+                <div class="card"   >
                         <div class="cover">
                             <img src="../assets/logos/logo_After_School.png" alt="">
                             <div class="img__back" style="background-image: url('../assets/capturas/After_School/cap_1.png');"></div>
@@ -724,7 +723,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                             <a href="../mod/template" class="saber_mas"> Más Información</a>
                         </div>
                 </div>
-                <div class="card"  data-aos="fade-down-right" data-aos-duration="2000">
+                <div class="card"   >
                         <div class="cover">
                             <img src="../assets/logos/default.png" alt="">
                             <div class="img__back" style="background-image: url('../assets/capturas/Meme_club/cap_1.jpg');"></div>
@@ -754,7 +753,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                             <a href="../mod/template" class="saber_mas"> Más Información</a>
                         </div>
                 </div>
-                <div class="card"  data-aos="fade-down-right" data-aos-duration="2000">
+                <div class="card"   >
                         <div class="cover">
                             <img src="../assets/logos/logo_Spirits.png" alt="">
                             <div class="img__back" style="background-image: url('../assets/capturas/Spirits/cap_1.jpg');"></div>
@@ -785,7 +784,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                         </div>
                 </div>
 <!------------------------------------------------------------------------------------------------------>
-                <div class="card"  data-aos="fade-down-right" data-aos-duration="2000">
+                <div class="card"   >
                         <div class="cover">
                             <img src="../assets/logos/logo_pink_eyes.png" alt="">
                             <div class="img__back" style="background-image: url('../assets/gui/Dania.png');"></div>
@@ -815,7 +814,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                             <a href="../mod/template" class="saber_mas"> Más Información</a>
                         </div>
                 </div>
-                <div class="card"  data-aos="fade-down-right" data-aos-duration="2000">
+                <div class="card"   >
                         <div class="cover">
                             <img src="../assets/logos/logo_Summertime.png" alt="">
                             <div class="img__back" style="background-image: url('../assets/capturas/Summertime/cap_1.jpg');"></div>
@@ -846,7 +845,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                             <a href="../mod/template" class="saber_mas"> Más Información</a>
                         </div>
                 </div>
-                <div class="card"  data-aos="fade-down-right" data-aos-duration="2000">
+                <div class="card"   >
                         <div class="cover">
                             <img src="../assets/logos/logo_esater_hunt.png" alt="">
                             <div class="img__back" style="background-image: url('../assets/capturas/Easter_Hunt/cap_1.jpg');"></div>
@@ -876,7 +875,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                             <a href="../mod/template" class="saber_mas"> Más Información</a>
                         </div>
                 </div>
-                <div class="card"  data-aos="fade-down-right" data-aos-duration="2000">
+                <div class="card"   >
                         <div class="cover">
                             <img src="../assets/logos/default.png" alt="">
                             <div class="img__back" style="background-image: url('../assets/capturas/A_Date_With_Sayori/cap_1.png');"></div>
