--- a/traducciones/pagina-3.html
+++ b/traducciones/pagina-3.html
@@ -119,7 +119,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                 </p>
                 </div>
             </div>
-            <a href="#" class="btn-close-popup">X</a>
+            <a href="pagina-3" class="btn-close-popup">X</a>
         </div>
     </div>
     <div class="parallax" style="background-image: url(../assets/gui/banner_traduccion.jpg);">
@@ -167,7 +167,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                 <div class="container_cards">
 <!------------------------------------------------------------------------------------------------------>
 <!--Copiar esta parte señalada con <!- -> para cada mod que sea agregado-->      
-                <div class="card"  data-aos="fade-down-right" data-aos-duration="1000">
+                <div class="card"  >
                     <div class="cover">
                         <img src="../assets/logos/logo_loser_MC.png" alt="">
                         <div class="img__back" style="background-image: url('../assets/capturas/Loser_MC/cap_1.jpg'); "></div>
@@ -199,7 +199,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                 </div>
 <!------------------------------------------------------------------------------------------------------>                
 <!--AGREGAR POR DEBAJO DE ESTA LINEA LAS NUEVAS CARTAS-->
-                <div class="card"  data-aos="fade-down-right" data-aos-duration="1000">
+                <div class="card"  >
                     <div class="cover">
                         <img src="../assets/logos/logo_sayonara.png" alt="">
                         <div class="img__back" style="background-image: url('../assets/capturas/Sayonara/cap_1.jpg');"></div>
@@ -230,7 +230,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                     </div>
                 </div>
 
-                <div class="card"  data-aos="fade-down-right" data-aos-duration="1000">
+                <div class="card"  >
                     <div class="cover">
                         <img src="../assets/logos/default.png" alt="">
                         <div class="img__back" style="background-image: url('../assets/gui/Dania.png');"></div>
@@ -261,7 +261,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                     </div>
                 </div>
 
-                <div class="card"  data-aos="fade-down-right" data-aos-duration="1000">
+                <div class="card"  >
                     <div class="cover">
                         <img src="../assets/logos/logo_christmas_heist.png" alt="">
                         <div class="img__back" style="background-image: url('../assets/capturas/MCs_Revenge/cap_1.jpg');"></div>
@@ -292,7 +292,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                     </div>
                 </div>
 <!------------------------------------------------------------------------------------------------------>
-                <div class="card"  data-aos="fade-down-left" data-aos-duration="1000">
+                <div class="card"   >
                         <div class="cover">
                             <img src="../assets/logos/logo_Horror_House.png" alt="">
                             <div class="img__back" style="background-image: url('../assets/capturas/Horror_House/cap_1.PNG');"></div>
@@ -322,7 +322,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                             <a href="../mod/template" class="saber_mas"> Más Información</a>
                         </div>
                 </div>
-                <div class="card"  data-aos="fade-down-left" data-aos-duration="1000">
+                <div class="card"   >
                         <div class="cover">
                             <img src="../assets/logos/default.png" alt="">
                             <div class="img__back" style="background-image: url('../assets/capturas/48HR/cap_1.png');"></div>
@@ -352,7 +352,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                             <a href="../mod/template" class="saber_mas"> Más Información</a>
                         </div>
                 </div>
-                <div class="card"  data-aos="fade-down-left" data-aos-duration="1000">
+                <div class="card"   >
                         <div class="cover">
                             <img src="../assets/logos/logo_limbo.png" alt="">
                             <div class="img__back" style="background-image: url('../assets/capturas/Limbo/cap_1.png');"></div>
@@ -382,7 +382,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                             <a href="../mod/template" class="saber_mas"> Más Información</a>
                         </div>
                 </div>
-                <div class="card"  data-aos="fade-down-left" data-aos-duration="1000">
+                <div class="card"   >
                         <div class="cover">
                             <img src="../assets/logos/default.png" alt="">
                             <div class="img__back" style="background-image: url('../assets/capturas/Meet_The_Buffsuki/cap_1.png');"></div>
@@ -413,7 +413,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                         </div>
                 </div>
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
-                <div class="card"  data-aos="fade-down-right" data-aos-duration="1000">
+                <div class="card"  >
                         <div class="cover">
                             <img src="../assets/logos/default.png" alt="">
                             <div class="img__back" style="background-image: url('../assets/capturas/Dimensions/cap_1.jpg');"></div>
@@ -444,7 +444,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                             <a href="../mod/template" class="saber_mas"> Más Información</a>
                         </div>
                 </div>
-                <div class="card"  data-aos="fade-down-right" data-aos-duration="1000">
+                <div class="card"  >
                         <div class="cover">
                             <img src="../assets/logos/default.png" alt="">
                             <div class="img__back" style="background-image: url('../assets/capturas/Yuri_Lavender_Adventure/cap_1.png');"></div>
@@ -474,7 +474,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                             <a href="../mod/template" class="saber_mas"> Más Información</a>
                         </div>
                 </div>
-                <div class="card"  data-aos="fade-down-right" data-aos-duration="1000">
+                <div class="card"  >
                         <div class="cover">
                             <img src="../assets/logos/default.png" alt="">
                             <div class="img__back" style="background-image: url('../assets/capturas/Tutorial/cap_1.png');"></div>
@@ -504,7 +504,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                             <a href="../mod/template" class="saber_mas"> Más Información</a>
                         </div>
                 </div>
-                <div class="card"  data-aos="fade-down-right" data-aos-duration="1000">
+                <div class="card"  >
                         <div class="cover">
                             <img src="../assets/logos/default.png" alt="">
                             <div class="img__back" style="background-image: url('../assets/capturas/After_Sayori/cap_1.jpg');"></div>
@@ -535,7 +535,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                         </div>
                 </div>
 <!------------------------------------------------------------------------------------------------------>
-                <div class="card"  data-aos="fade-down-left" data-aos-duration="1000">
+                <div class="card"   >
                         <div class="cover">
                             <img src="../assets/logos/logo_fruits_of_the_literature_club.png" alt="">
                             <div class="img__back" style="background-image: url('../assets/capturas/Fruits_of_the_literature_club/cap_1.jpg');"></div>
@@ -566,7 +566,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                             <a href="../mod/template" class="saber_mas"> Más Información</a>
                         </div>
                 </div>
-                <div class="card"  data-aos="fade-down-left" data-aos-duration="1000">
+                <div class="card"   >
                         <div class="cover">
                             <img src="../assets/logos/logo_a_father_redemtion.png" alt="">
                             <div class="img__back" style="background-image: url('../assets/capturas/Father_redemtion/cap_1.jpg')"></div>
@@ -596,7 +596,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                             <a href="../mod/template" class="saber_mas"> Más Información</a>
                         </div>
                 </div>
-                <div class="card"  data-aos="fade-down-left" data-aos-duration="1000">
+                <div class="card"   >
                         <div class="cover">
                             <img src="../assets/logos/logo_machine_libra.png" alt="">
                             <div class="img__back" style="background-image: url('../assets/capturas/Machine_Libra/cap_1.png');"></div>
@@ -626,7 +626,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                             <a href="../mod/template" class="saber_mas"> Más Información</a>
                         </div>
                 </div>
-                <div class="card"  data-aos="fade-down-left" data-aos-duration="1000">
+                <div class="card"   >
                         <div class="cover">
                             <img src="../assets/logos/logo_just_yuri.png" alt="">
                             <div class="img__back" style="background-image: url('../assets/capturas/Just_Yuri/cap_1.jpg');"></div>
@@ -658,7 +658,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                         </div>
                 </div>
 <!------------------------------------------------------------------------------------------------------>
-                <div class="card"  data-aos="fade-down-right" data-aos-duration="1000">
+                <div class="card"  >
                         <div class="cover">
                             <img src="../assets/logos/logo_whatheard.png" alt="">
                             <div class="img__back" style="background-image: url('../assets/gui/Dania.png');"></div>
@@ -688,7 +688,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                             <a href="../mod/template" class="saber_mas"> Más Información</a>
                         </div>
                 </div>
-                <div class="card"  data-aos="fade-down-right" data-aos-duration="1000">
+                <div class="card"  >
                         <div class="cover">
                             <img src="../assets/logos/logo_college_club.png" alt="">
                             <div class="img__back" style="background-image: url('../assets/gui/Dania.png');"></div>
@@ -718,7 +718,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                             <a href="../mod/template" class="saber_mas"> Más Información</a>
                         </div>
                 </div>
-                <div class="card"  data-aos="fade-down-right" data-aos-duration="1000">
+                <div class="card"  >
                         <div class="cover">
                             <img src="../assets/logos/logo_father_bullet.png" alt="">
                             <div class="img__back" style="background-image: url('../assets/capturas/Fateful_Bullet/cap_1.jpg');"></div>
@@ -748,7 +748,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                             <a href="../mod/template" class="saber_mas"> Más Información</a>
                         </div>
                 </div>
-                <div class="card"  data-aos="fade-down-right" data-aos-duration="1000">
+                <div class="card"  >
                         <div class="cover">
                             <img src="../assets/logos/logo_a_day_with_monika.png" alt="">
                             <div class="img__back" style="background-image: url('../assets/capturas/A_Day_With_Monika/cap_1.png');"></div>
@@ -779,7 +779,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                         </div>
                 </div>
 <!------------------------------------------------------------------------------------------------------>
-                <div class="card"  data-aos="fade-down-left" data-aos-duration="1000">
+                <div class="card"   >
                         <div class="cover">
                             <img src="../assets/logos/logo_corrupted_files.png" alt="">
                             <div class="img__back" style="background-image: url('../assets/capturas/Corrupted_Files/cap_1.png');"></div>
@@ -809,7 +809,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                             <a href="../mod/template" class="saber_mas"> Más Información</a>
                         </div>
                 </div>
-                <div class="card"  data-aos="fade-down-left" data-aos-duration="1000">
+                <div class="card"   >
                         <div class="cover">
                             <img src="../assets/logos/logo_purist_mod.png" alt="">
                             <div class="img__back" style="background-image: url('../assets/capturas/Purist_Mod/cap_1.png');"></div>
@@ -840,7 +840,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                             <a href="../mod/template" class="saber_mas"> Más Información</a>
                         </div>
                 </div>
-                <div class="card"  data-aos="fade-down-left" data-aos-duration="1000">
+                <div class="card"   >
                         <div class="cover">
                             <img src="../assets/logos/logo_Tripping_backwards.png" alt="">
                             <div class="img__back" style="background-image: url('../assets/capturas/Tripping_Backwards/cap_1.png');"></div>
@@ -871,7 +871,7 @@ AL TERMINAR DE AGREGAR UN MOD, POR FAVOR ACCEDA Al ENLACE DE REGISTRO, PARA PODE
                             <a href="../mod/template" class="saber_mas"> Más Información</a>
                         </div>
                 </div>
-                <div class="card"  data-aos="fade-down-left" data-aos-duration="1000">
+                <div class="card"   >
                         <div class="cover">
                             <img src="../assets/logos/logo_examination.png" alt="">
                             <div class="img__back" style="background-image: url('../assets/capturas/Examination/cap_1.jpg');"></div>
